@@ -14,7 +14,6 @@
 package com.predic8.membrane.core.interceptor.oauth2;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import com.predic8.membrane.core.HttpRouter;
 import com.predic8.membrane.core.exchange.Exchange;
 import com.predic8.membrane.core.http.HeaderField;
@@ -158,7 +157,7 @@ public class OAuth2ResourceTest {
             }));
 
         }
-        threadList.forEach(thread -> thread.start());
+        threadList.forEach(Thread::start);
         threadList.forEach(thread -> {
             try {
                 thread.join();
@@ -355,111 +354,104 @@ public class OAuth2ResourceTest {
 
     // this implementation does NOT implement a correct cookie manager, but fulfills this test's requirements
     private Function<Exchange, Exchange> cookieManager(Function<Exchange, Exchange> consumer) {
-        return new Function<Exchange, Exchange>() {
-
-            @Override
-            public Exchange call(Exchange exc) {
-                String domain = null;
-                try {
-                    domain = new URL(exc.getDestinations().get(0)).getHost();
-                } catch (MalformedURLException e) {
-                    throw new RuntimeException(e);
-                }
-                Map<String, String> cookies;
-                synchronized (cookie) {
-                    cookies = cookie.get(domain);
-                }
-                if (cookies != null)
-                    synchronized (cookies) {
-                        Exchange finalExc = exc;
-                        cookies.forEach((k, v) -> finalExc.getRequest().getHeader().add("Cookie", k + "=" + v));
-                }
-                exc = consumer.call(exc);
-
-                for (HeaderField headerField : exc.getResponse().getHeader().getValues(new HeaderName("Set-Cookie"))) {
-                    LOG.debug("from "+domain+" got Set-Cookie: " + headerField.getValue());
-
-                    String value = headerField.getValue().substring(0, headerField.getValue().indexOf(";"));
-                    boolean expired = headerField.getValue().contains("1970");
-
-                    String key = value.substring(0, value.indexOf("=")).trim();
-                    value = value.substring(value.indexOf("=")+1).trim();
-
-                    if (cookies == null) {
-                        cookies = new HashMap<>();
-                        synchronized (cookie) {
-                            // recheck whether there are still no cookies yet
-                            Map<String, String> cookies2 = cookie.get(domain);
-                            if (cookies2 != null)
-                                cookies = cookies2;
-                            else
-                                cookie.put(domain, cookies);
-                        }
-                    }
-
-                    if (expired) {
-                        LOG.debug("removing cookie.");
-                        synchronized (cookies) {
-                            cookies.remove(key);
-                        }
-                    } else {
-                        try {
-                            JwtConsumer jwtc = new JwtConsumerBuilder()
-                                    .setSkipSignatureVerification()
-                                    .build();
-
-                            String v = headerField.getValue();
-                            JwtClaims claims = jwtc.processToClaims(v.substring(0, v.indexOf("=")));
-                            for (Map.Entry<String, Object> entry : claims.getClaimsMap().entrySet()) {
-                                LOG.debug(entry.getKey() + ": " + entry.getValue());
-                            }
-                        } catch (InvalidJwtException e) {
-                            //ignore
-                        }
-
-                        synchronized (cookies) {
-                            cookies.put(key, value);
-                        }
-                    }
-                }
-
-                return exc;
+        return exc -> {
+            String domain = null;
+            try {
+                domain = new URL(exc.getDestinations().get(0)).getHost();
+            } catch (MalformedURLException e) {
+                throw new RuntimeException(e);
             }
+            Map<String, String> cookies;
+            synchronized (cookie) {
+                cookies = cookie.get(domain);
+            }
+            if (cookies != null)
+                synchronized (cookies) {
+                    Exchange finalExc = exc;
+                    cookies.forEach((k, v) -> finalExc.getRequest().getHeader().add("Cookie", k + "=" + v));
+                }
+            exc = consumer.call(exc);
+
+            for (HeaderField headerField : exc.getResponse().getHeader().getValues(new HeaderName("Set-Cookie"))) {
+                LOG.debug("from " + domain + " got Set-Cookie: " + headerField.getValue());
+
+                String value = headerField.getValue().substring(0, headerField.getValue().indexOf(";"));
+                boolean expired = headerField.getValue().contains("1970");
+
+                String key = value.substring(0, value.indexOf("=")).trim();
+                value = value.substring(value.indexOf("=") + 1).trim();
+
+                if (cookies == null) {
+                    cookies = new HashMap<>();
+                    synchronized (cookie) {
+                        // recheck whether there are still no cookies yet
+                        Map<String, String> cookies2 = cookie.get(domain);
+                        if (cookies2 != null)
+                            cookies = cookies2;
+                        else
+                            cookie.put(domain, cookies);
+                    }
+                }
+
+                if (expired) {
+                    LOG.debug("removing cookie.");
+                    synchronized (cookies) {
+                        cookies.remove(key);
+                    }
+                } else {
+                    try {
+                        JwtConsumer jwtc = new JwtConsumerBuilder()
+                                .setSkipSignatureVerification()
+                                .build();
+
+                        String v = headerField.getValue();
+                        JwtClaims claims = jwtc.processToClaims(v.substring(0, v.indexOf("=")));
+                        for (Map.Entry<String, Object> entry : claims.getClaimsMap().entrySet()) {
+                            LOG.debug(entry.getKey() + ": " + entry.getValue());
+                        }
+                    } catch (InvalidJwtException e) {
+                        //ignore
+                    }
+
+                    synchronized (cookies) {
+                        cookies.put(key, value);
+                    }
+                }
+            }
+
+            return exc;
         };
     }
 
     private Function<Exchange, Exchange> handleRedirect(Function<Exchange, Exchange> consumer) {
-        return new Function<Exchange, Exchange>() {
-            @Override
-            public Exchange call(Exchange exc) {
-                ArrayList urls = new ArrayList<>();
-                while (true) {
-                    if (urls.size() == 19)
-                        throw new RuntimeException("Too many redirects: " + urls);
-                    exc = consumer.call(exc);
+        return exc -> {
+            ArrayList<Object> urls = new ArrayList<>();
+            while (true) {
+                if (urls.size() == 19)
+                    throw new RuntimeException("Too many redirects: " + urls);
+                exc = consumer.call(exc);
 
-                    int statusCode = exc.getResponse().getStatusCode();
-                    String location = exc.getResponse().getHeader().getFirstValue("Location");
-                    if (statusCode < 300 || statusCode >= 400 || location == null)
-                        break;
-                    if (!location.contains("://"))
-                        location = ResolverMap.combine(exc.getDestinations().get(0), location);
-                    urls.add(location);
-                    try {
-                        exc = new Request.Builder().get(location).buildExchange();
-                    } catch (URISyntaxException e) {
-                        throw new RuntimeException(e);
-                    }
-
-                    LOG.debug("redirected to " + exc.getDestinations().get(0));
+                int statusCode = exc.getResponse().getStatusCode();
+                String location = exc.getResponse().getHeader().getFirstValue("Location");
+                if (statusCode < 300 || statusCode >= 400 || location == null)
+                    break;
+                if (!location.contains("://"))
+                    location = ResolverMap.combine(exc.getDestinations().get(0), location);
+                urls.add(location);
+                try {
+                    exc = new Request.Builder().get(location).buildExchange();
+                } catch (URISyntaxException e) {
+                    throw new RuntimeException(e);
                 }
-                return exc;
+
+                LOG.debug("redirected to " + exc.getDestinations().get(0));
             }
+            return exc;
         };
     }
 
     private Function<Exchange, Exchange> httpClient() {
-        return new Function<Exchange, Exchange>() {
+        return new Function<>() {
             HttpClient httpClient = new HttpClient();
 
             @Override
@@ -550,7 +542,7 @@ public class OAuth2ResourceTest {
             public Outcome handleRequest(Exchange exc) throws Exception {
                 OAuth2AnswerParameters answer = OAuth2AnswerParameters.deserialize(String.valueOf(exc.getProperty(Exchange.OAUTH2)));
                 String accessToken = answer.getAccessToken();
-                Map body = ImmutableMap.of(
+                Map<String, String> body = Map.of(
                         "accessToken", accessToken,
                         "path", exc.getRequestURI(),
                         "method", exc.getRequest().getMethod(),
